added home section

--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
     </header>
     <!-- Header Section End  -->
     
+    <!-- Home section Start  -->
     <section class="home">
         <div class="heading">
             <h1>Start Your Journey as <br> Influencer</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis <br> reiciendis sapiente praesentium a aut maxime deleniti ut consequuntur!</p>
+            <button class="btn">Preebook Now <i class="fas fa-arrow-right"></i></button>
         </div>
-        <div class="">
+        <div class="image">
             <img src="images/main-camera.png" alt="">
         </div>
-        <!-- <button class="btn">Preebook Now</button> -->
-        </section>
+    </section>
+    <!-- Home section End  -->
 </body>
 </html>
