brand section added

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <a href="#"><i class="fas fa-shopping-cart"></i></a>
         </div>
     </header>
-    <!-- Header Section End  -->
+    <!-- Header Section Ends  -->
     
-    <!-- Home section Start  -->
+    <!-- Home section Starts  -->
     <section class="home">
         <div class="heading">
             <h1>Start Your Journey as <br> Influencer</h1>
@@ -39,6 +39,18 @@
             <img src="images/main-camera.png" alt="">
         </div>
     </section>
-    <!-- Home section End  -->
+    <!-- Home section Ends  -->
+
+    <!-- Brand Logo section Start  -->
+    <section class="brand">
+        <img src="logos/Alibaba.svg" alt="">
+        <img src="logos/Amazon.svg" alt="">
+        <img src="logos/Daraz.pk Logo.svg" alt="">
+        <img src="logos/Ebay.svg" alt="">
+        <img src="logos/Rakuten.svg" alt="">
+        <img src="logos/Target.svg" alt="">
+        <img src="logos/Walmart.svg" alt="">
+    </section>
+    <!-- Brand Logo section Ends  -->
 </body>
 </html>
