--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <main>
           <!-- Header Section Start  -->
           <header class="header">
+            <div id="menu-btn"class="fas fa-bars"></div>
             <div>
               <a href="#" class="logo">Influencer Products</a>
             </div>
@@ -80,7 +81,7 @@
               <div class="box">
                 <img src="images/tripod.png" alt="" />
                 <h3>Flex Tripod</h3>
-                <span class="price">$12.99</span>
+                <span class="price">$980.99</span>
                 <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -91,9 +92,9 @@
                 <!-- <a href="#" class="card-btn">Buy Now</a> -->
               </div>
               <div class="box">
-                <img src="images/tripod.png" alt="" />
+                <img src="images/mic.png" alt="" />
                 <h3>Flex Tripod</h3>
-                <a href="#">$50.48</a>
+                <span href="#">$480.48</span>
                 <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -103,9 +104,9 @@
                 </div>
               </div>
               <div class="box">
-                <img src="images/tripod.png" alt="" />
+                <img src="images/airpod.png" alt="" />
                 <h3>Flex Tripod</h3>
-                <a href="#">$50.48</a>
+                <span href="#">$750.48</span>
                 <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -115,9 +116,9 @@
                 </div>
               </div>
               <div class="box">
-                <img src="images/tripod.png" alt="" />
+                <img src="images/drone.png" alt="" />
                 <h3>Flex Tripod</h3>
-                <a href="#">$50.48</a>
+                <span href="#">$120.48</span>
                 <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -127,9 +128,9 @@
                 </div>
               </div>
               <div class="box">
-                <img src="images/tripod.png" alt="" />
+                <img src="images/lights.png" alt="" />
                 <h3>Flex Tripod</h3>
-                <a href="#">$50.48</a>
+                <span href="#">$350.48</span>
                 <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -139,9 +140,9 @@
                 </div>
               </div>
               <div class="box">
-                <img src="images/tripod.png" alt="" />
+                <img src="images/setup.png" alt="" />
                 <h3>Flex Tripod</h3>
-                <a href="#">$50.48</a>
+                <span href="#">$950.48</span>
                 <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -151,9 +152,9 @@
                 </div>
               </div>
               <div class="box">
-                <img src="images/tripod.png" alt="" />
+                <img src="images/camera.png" alt="" />
                 <h3>Flex Tripod</h3>
-                <a href="#">$50.48</a>
+                <span href="#">$560.48</span>
                 <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -163,9 +164,9 @@
                 </div>
               </div>
               <div class="box">
-                <img src="images/tripod.png" alt="" />
+                <img src="images/single-light.png" alt="" />
                 <h3>Flex Tripod</h3>
-                <a href="#">$50.48</a>
+                <span href="#">$850.48</span>
                 <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -175,9 +176,9 @@
                 </div>
               </div>
               <div class="box">
-                <img src="images/tripod.png" alt="" />
-                <h3>Flex Tripod</h3>
-                <a href="#">$50.48</a>
+                <img src="images/action.png" alt="" />
+                <h3>Action Camera</h3>
+                <span href="#">$350.48</span>
                 <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
