--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           Influencer
         </h1>
         <p>
-          When working with influencers, brands  have to let go and allow influencers control <br> of the narrative to preserve the authenticity of what is being communicated. <br> Stop Worrying and enjoy the journey.
+          When working with influencers, brands  have to let go and allow influencers control <br> of the narrative to preserve the authenticity of what is being communicated. <br> Stop worrying about the potholes and enjoy the journey.
         </p>
         <button class="btn">
           Explore Now <i class="fas fa-arrow-right"></i>
